--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "db": "^6.0.3",
+    "framer-motion": "^11.14.1",
     "generate": "^0.14.0",
     "jose": "^5.9.6",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "next-themes": "^0.4.4",
     "npx": "^10.2.2",
     "prisma": "^6.0.1",
     "push": "^0.1.1",
