--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "db": "^6.0.3",
@@ -29,6 +30,7 @@
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "npx": "^10.2.2",
+    "open": "^10.1.0",
     "prisma": "^6.0.1",
     "push": "^0.1.1",
     "react": "^19.0.0",
