--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"f": "prettier --write \"**/*.{ts,tsx,mdx,json}\" --cache # Format code"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.1",
 		"@prisma/client": "^6.0.1",
 		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.3",
@@ -34,11 +35,13 @@
 		"prisma": "^6.0.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.1",
 		"sonner": "^1.7.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^11.0.3",
-		"zod": "^3.24.1"
+		"zod": "^3.24.1",
+		"zustand": "^5.0.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.2.0",
