--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@radix-ui/react-dialog": "^1.1.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.3",
 		"@radix-ui/react-select": "^2.1.3",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.4",
@@ -25,7 +26,11 @@
 		"chalk": "^5.3.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "1.0.0",
 		"framer-motion": "^11.14.1",
+		"fumadocs-core": "^14.6.1",
+		"fumadocs-mdx": "^11.1.2",
+		"fumadocs-ui": "^14.6.1",
 		"geist": "^1.3.1",
 		"jose": "^5.9.6",
 		"lucide-react": "^0.468.0",
