--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.3",
 		"@radix-ui/react-select": "^2.1.3",
-		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-separator": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-switch": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.1.4",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/uuid": "^10.0.0",
@@ -27,7 +29,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
-		"framer-motion": "^11.14.1",
+		"framer-motion": "^11.14.4",
 		"fumadocs-core": "^14.6.1",
 		"fumadocs-mdx": "^11.1.2",
 		"fumadocs-ui": "^14.6.1",
