work on apearance switcher

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,145 @@
 {
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"window.titleBarStyle": "native",
+	"apc.electron": {
+		"frame": false
+	},
+	"apc.header": {
+		"height": 40
+	},
+	// "apc.font.family": "dm sans 24pt",
+	"apc.font.family": "inter",
+	"editor.cursorSmoothCaretAnimation": "off",
+	"files.insertFinalNewline": true,
+	"debug.console.fontFamily": "JetBrains mono",
+	"debug.console.fontSize": 15,
+	"debug.console.lineHeight": 35,
+	"debug.toolBarLocation": "docked",
+	"diffEditor.ignoreTrimWhitespace": false,
+	"diffEditor.renderSideBySide": false,
+	"editor.bracketPairColorization.enabled": false,
+	"editor.colorDecorators": false,
+	"editor.cursorStyle": "line",
+	// "editor.fontFamily": "cascadia code",
+	// "editor.fontFamily": "caskaydia cove",
+	// "editor.fontFamily": "Hack",
+	// "editor.fontFamily": "sf mono",
+	"editor.fontFamily": "Jetbrains mono",
+	// "editor.fontFamily": "0xproto nerd font",
+	// "editor.fontFamily": "fira code",
+	// "editor.fontFamily": "caskydia",
+	// "editor.fontFamily": "cascadia code",
+	//  "editor.fontFamily": "spline sans mono",
+	//  "editor.fontFamily": "sourcecodevf",
+	//  "editor.fontFamily": "monaspicene nerd font",
+	//  "editor.fontFamily": "dm sans 24pt",
+	// "editor.fontFamily": "monaspicekr nerd font",
+	// "editor.fontFamily": "geistmono nerd font",
+	// "editor.fontFamily": "ibm plex mono",
+	//  "editor.fontFamily": "recursive mono linear static",
+	//  "editor.fontFamily": "monaspicear nerd font",
+	// "editor.fontFamily": "rec mono linear",
+	"editor.fontLigatures": "'ss01', 'cv03', 'zero'",
+	"editor.fontSize": 17,
+	"editor.glyphMargin": false,
+	"editor.gotoLocation.multipleDeclarations": "goto",
+	"editor.gotoLocation.multipleDefinitions": "goto",
+	"editor.gotoLocation.multipleImplementations": "goto",
+	"editor.gotoLocation.multipleReferences": "goto",
+	"editor.gotoLocation.multipleTypeDefinitions": "goto",
+	"editor.guides.indentation": false,
+	"editor.hideCursorInOverviewRuler": true,
+	"editor.lineHeight": 25,
+	"editor.lineNumbers": "off",
+	"editor.matchBrackets": "near",
+	"editor.minimap.enabled": false,
+	"editor.occurrencesHighlight": "off",
+	"editor.renderLineHighlight": "none",
+	"editor.renderWhitespace": "none",
+	"editor.scrollbar.horizontalScrollbarSize": 8,
+	"editor.scrollbar.verticalScrollbarSize": 8,
+	"explorer.compactFolders": false,
+	"explorer.decorations.badges": false,
+	"explorer.openEditors.visible": 1,
+	"git.enableSmartCommit": true,
+	"git.confirmSync": false,
+	"markdown.preview.markEditorSelection": false,
+	"problems.decorations.enabled": false,
+	"scm.diffDecorations": "none",
+	"terminal.integrated.cursorStyle": "line",
+	"terminal.integrated.enableMultiLinePasteWarning": "never",
+	"terminal.integrated.fontSize": 15,
+	"terminal.integrated.lineHeight": 1.85,
+	"window.autoDetectColorScheme": true,
+	"window.newWindowDimensions": "inherit",
+	"window.title": "‎",
+	"workbench.colorTheme": "Vesper",
+	"workbench.editor.enablePreview": false,
+	"workbench.editor.revealIfOpen": true,
+	"workbench.iconTheme": "symbols",
+	"workbench.list.horizontalScrolling": true,
+	"workbench.preferredDarkColorTheme": "Vesper",
+	"workbench.startupEditor": "none",
+	"workbench.tips.enabled": false,
+	"workbench.tree.indent": 16,
+	"workbench.tree.renderIndentGuides": "none",
+	"window.customTitleBarVisibility": "auto",
+	"symbols.hidesExplorerArrows": false,
+	"workbench.activityBar.location": "hidden",
+	"window.commandCenter": false,
+	"workbench.layoutControl.enabled": false,
+	"editor.stickyScroll.enabled": false,
+	"editor.mouseWheelZoom": true,
+	"security.workspace.trust.untrustedFiles": "open",
+	"[dart]": {
+		"editor.formatOnSave": true,
+		"editor.formatOnType": true,
+		"editor.rulers": [],
+		"editor.selectionHighlight": false,
+		"editor.suggestSelection": "first",
+		"editor.tabCompletion": "on",
+		"editor.wordBasedSuggestions": "allDocuments",
+		"editor.defaultFormatter": "Dart-Code.dart-code"
+	},
+	"security.workspace.trust.banner": "never",
+	"[blade]": {
+		"editor.defaultFormatter": "shufo.vscode-blade-formatter"
+	},
+	"editor.formatOnSave": true,
+	"scm.inputFontFamily": "JetBrains mono",
+	"[php]": {
+		"editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
+	},
+	"workbench.productIconTheme": "Tabler",
+	"editor.unicodeHighlight.nonBasicASCII": false,
+	"editor.formatOnPaste": true,
+	"bladeFormatter.format.sortHtmlAttributes": "code-guide",
+	"bladeFormatter.format.sortTailwindcssClasses": true,
+	"razor.format.codeBlockBraceOnNextLine": true,
+	"editor.quickSuggestionsDelay": 0,
+	"emmet.showSuggestionsAsSnippets": true,
+	"editor.quickSuggestions": {
+		"comments": true,
+		"strings": true,
+		"other": true
+	},
+	"tailwindCSS.includeLanguages": {
+		"blade": "html"
+	},
+	"workbench.editor.editorActionsLocation": "hidden",
+	"workbench.statusBar.visible": false,
+	"workbench.editor.showTabs": "single",
+	"workbench.preferredLightColorTheme": "luna-pro-starlight",
+	"workbench.sideBar.location": "right",
+	"phpTools.language": "en",
+	"laravel-pint.enable": true,
+	"editor.snippetSuggestions": "top",
+	"editor.parameterHints.enabled": false,
+	"editor.suggest.snippetsPreventQuickSuggestions": false,
+	"editor.cursorBlinking": "solid",
+	"editor.accessibilitySupport": "off",
+	"explorer.confirmPasteNative": false,
+	"dart.flutterSdkPath": "/home/loww/dev/flutter/flutter-sdk",
+	"window.menuBarVisibility": "toggle",
+	"catppuccin-noctis-icons.hidesExplorerArrows": false,
+	"redhat.telemetry.enabled": false
 }
