--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
 		"@hookform/resolvers": "^3.9.1",
 		"@number-flow/react": "^0.4.2",
 		"@prisma/client": "^6.0.1",
-		"@radix-ui/react-avatar": "^1.1.1",
+		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.3",
+		"@radix-ui/react-scroll-area": "^1.2.2",
 		"@radix-ui/react-select": "^2.1.3",
 		"@radix-ui/react-separator": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
@@ -29,6 +30,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
+		"date-fns": "^4.1.0",
 		"framer-motion": "^11.14.4",
 		"fumadocs-core": "^14.6.1",
 		"fumadocs-mdx": "^11.1.2",
@@ -44,6 +46,8 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.1",
+		"react-resizable-panels": "^2.1.7",
+		"recharts": "^2.15.0",
 		"sass": "^1.83.0",
 		"sonner": "^1.7.1",
 		"tailwind-merge": "^2.5.5",
