--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@number-flow/react": "^0.4.2",
 		"@prisma/client": "^6.1.0",
 		"@radix-ui/react-avatar": "^1.1.1",
+		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
