--- a/package.json
+++ b/package.json
@@ -1,67 +1,79 @@
 {
-	"name": "prisma",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
-		"check": "tsc --noEmit # Type check the project",
-		"f": "prettier --write \"**/*.{ts,tsx,mdx,json}\" --cache # Format code"
-	},
-	"dependencies": {
-		"@hookform/resolvers": "^3.9.1",
-		"@number-flow/react": "^0.4.2",
-		"@prisma/client": "^6.0.1",
-		"@radix-ui/react-avatar": "^1.1.1",
-		"@radix-ui/react-dialog": "^1.1.3",
-		"@radix-ui/react-dropdown-menu": "^2.1.2",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-popover": "^1.1.3",
-		"@radix-ui/react-select": "^2.1.3",
-		"@radix-ui/react-separator": "^1.1.1",
-		"@radix-ui/react-slot": "^1.1.1",
-		"@radix-ui/react-switch": "^1.1.2",
-		"@radix-ui/react-tabs": "^1.1.2",
-		"@radix-ui/react-tooltip": "^1.1.4",
-		"@types/bcryptjs": "^2.4.6",
-		"@types/uuid": "^10.0.0",
-		"bcryptjs": "^2.4.3",
-		"chalk": "^5.3.0",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"cmdk": "1.0.0",
-		"framer-motion": "^11.14.4",
-		"fumadocs-core": "^14.6.1",
-		"fumadocs-mdx": "^11.1.2",
-		"fumadocs-ui": "^14.6.1",
-		"geist": "^1.3.1",
-		"jose": "^5.9.6",
-		"lucide-react": "^0.468.0",
-		"next": "15.1.0",
-		"next-themes": "^0.4.4",
-		"open": "^10.1.0",
-		"prettier": "^3.4.2",
-		"prisma": "^6.0.1",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-hook-form": "^7.54.1",
-		"sass": "^1.83.0",
-		"sonner": "^1.7.1",
-		"tailwind-merge": "^2.5.5",
-		"tailwindcss-animate": "^1.0.7",
-		"uuid": "^11.0.3",
-		"zod": "^3.24.1",
-		"zustand": "^5.0.2"
-	},
-	"devDependencies": {
-		"@eslint/eslintrc": "^3.2.0",
-		"@types/node": "^20.17.10",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"eslint": "^9",
-		"eslint-config-next": "15.1.0",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
-	}
+  "name": "roll-your-own-authentication-comprehensive",
+  "description": "A NextJS project showcasing how to roll your own libraryless authentication, grown into full-fledged personal dashboard with all the best practices and modern design",
+  "author": "Remco Stoeten",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "check": "tsc --noEmit",
+    "f": "prettier --write \"**/*.{ts,tsx,mdx,json}\" --cache",
+    "doc": "node scripts/add-docstring.js",
+    "fix:ui": "python3 src/core/scripts/fix-imports/optimize-ui-imports.py --all",
+    "fix:ui-file": "python3 src/core/scripts/optimize-ui-imports.py --file"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@number-flow/react": "^0.4.2",
+    "@octokit/rest": "^21.1.0",
+    "@prisma/client": "^6.0.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.3",
+    "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/uuid": "^10.0.0",
+    "bcryptjs": "^2.4.3",
+    "chalk": "^5.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
+    "framer-motion": "^11.15.0",
+    "fumadocs-core": "^14.6.1",
+    "fumadocs-mdx": "^11.1.2",
+    "fumadocs-ui": "^14.6.1",
+    "geist": "^1.3.1",
+    "jose": "^5.9.6",
+    "lucide-react": "^0.468.0",
+    "next": "15.1.0",
+    "next-themes": "^0.4.4",
+    "open": "^10.1.0",
+    "prettier": "^3.4.2",
+    "prisma": "^6.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
+    "recharts": "^2.15.0",
+    "sass": "^1.83.0",
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@types/node": "^20.17.10",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.0",
+    "fs-extra": "^11.3.0",
+    "fuzzy": "^0.1.3",
+    "glob": "^10.4.5",
+    "inquirer": "^9.2.14",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
